Preenchendo um relatório JasperReports com JavaBeans e gerando bytes do PDF